--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "gatsby": "^2.3.32",
+    "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-layout": "^1.0.15",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "react": "^16.8.6",
